--- a/UI/Client/ProviderLookupDialog.xaml
+++ b/UI/Client/ProviderLookupDialog.xaml
@@ -28,10 +28,10 @@
 					<ListView Name="ListBoxProviders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="2,2,2,2" MouseDoubleClick="ListBoxProviders_MouseDoubleClick"
 							 ItemsSource="{Binding Path=ProviderCollection}">
 						<ListView.View>
-							<GridView>
-								<GridViewColumn Header="Id" Width="65" DisplayMemberBinding="{Binding Path=ProviderId}" />
+							<GridView>								
 								<GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Path=DisplayName}" />																                                
 								<GridViewColumn Header="Credentials" Width="100" DisplayMemberBinding="{Binding Path=Credentials}" />
+                                <GridViewColumn Header="NPI" Width="100" DisplayMemberBinding="{Binding Path=Npi}" />
 							</GridView>
 						</ListView.View>
 					</ListView>
