--- a/UI/Client/ClientSupplyOrderDialog.xaml
+++ b/UI/Client/ClientSupplyOrderDialog.xaml
@@ -1,8 +1,161 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ClientSupplyOrderDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ClientSupplyOrderDialog" Height="300" Width="300">
+        Title="ClientSupplyOrderDialog" Height="600" Width="600">
     <Grid>
-        
-    </Grid>
+
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"></RowDefinition>
+			<RowDefinition Height="*"></RowDefinition>
+			<RowDefinition Height="Auto"></RowDefinition>
+		</Grid.RowDefinitions>
+		
+		<Grid Grid.Row="1" Margin="5">
+			
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto"></RowDefinition>
+				<RowDefinition Height="*"></RowDefinition>
+				<RowDefinition Height="Auto"></RowDefinition>
+				<RowDefinition Height="Auto"></RowDefinition>
+			</Grid.RowDefinitions>
+
+			<Grid Grid.Column="0" Grid.Row="0">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto"></ColumnDefinition>
+					<ColumnDefinition Width="2*"></ColumnDefinition>
+					<ColumnDefinition Width="Auto"></ColumnDefinition>
+					<ColumnDefinition Width="*"></ColumnDefinition>
+				</Grid.ColumnDefinitions>
+				
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+				</Grid.RowDefinitions>
+
+				<TextBlock Grid.Column="0" Grid.Row="0" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client:</TextBlock>
+				<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientName}" />
+
+				<TextBlock Grid.Column="2" Grid.Row="0" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client Id:</TextBlock>
+				<TextBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientId}" />
+
+				<TextBlock Grid.Column="0" Grid.Row="1" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Address:</TextBlock>
+				<TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientAddress}" />
+
+				<TextBlock Grid.Column="2" Grid.Row="1" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Id:</TextBlock>
+				<TextBox Grid.Column="3" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.OrderId}" />
+
+				<TextBlock Grid.Column="0" Grid.Row="2" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >City/State/Zip:</TextBlock>
+				
+				<Grid Grid.Column="1" Grid.Row="2">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="2*"></ColumnDefinition>
+						<ColumnDefinition Width="2*"></ColumnDefinition>
+						<ColumnDefinition Width="*"></ColumnDefinition>
+					</Grid.ColumnDefinitions>
+
+					<TextBox Grid.Column="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientCity}" />
+					<TextBox Grid.Column="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientState}" />
+					<TextBox Grid.Column="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientZip}" />
+
+				</Grid>
+
+				<TextBlock Grid.Column="2" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Date:</TextBlock>
+				<TextBox Grid.Column="3" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.OrderDate, Converter={StaticResource ShortDateTimeConverter}}" />
+
+				<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Comment:</TextBlock>
+				<TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding Path=ClientSupplyOrder.Comment}" />
+
+				<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Quantity:</TextBlock>
+				<TextBox Grid.Column="1" Grid.Row="4" Name="TextBoxQuantity" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" />
+
+				<TextBlock Grid.Column="2" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Contact Name:</TextBlock>
+				<TextBox Grid.Column="3" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ContactName}" />
+
+			</Grid>
+
+			<Grid Grid.Column="0" Grid.Row="1" Margin="2">
+				
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto"></ColumnDefinition>
+					<ColumnDefinition Width="*"></ColumnDefinition>
+				</Grid.ColumnDefinitions>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="2*"></RowDefinition>
+					<RowDefinition Height="*"></RowDefinition>
+				</Grid.RowDefinitions>
+
+				<Grid Grid.Column="0" Grid.Row="0" Margin="2">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+				</Grid.RowDefinitions>
+
+				<Button Grid.Row="0" Margin="2,2,2,2" Width="120" Height="30" Content="Cytology Supplies" Click="ButtonCytologySupplies_Click"/>
+				<Button Grid.Row="1" Margin="2,2,2,2" Width="120" Height="30" Content="Biopsy Supplies" Click="ButtonBiopsySupplies_Click"/>
+				<Button Grid.Row="2" Margin="2,2,2,2" Width="120" Height="30" Content="Transport Supplies" Click="ButtonTransportSupplies_Click"/>
+				<Button Grid.Row="3" Margin="2,2,2,2" Width="120" Height="30" Content="Forms" Click="ButtonForms_Click"/>
+			</Grid>
+
+				<ListView Grid.Column="1" Grid.Row="0" Name="ListViewSupplies" Margin="2,2,2,2" ItemsSource="{Binding Path=ClientSupplyCollection}" MouseDoubleClick="ListViewSupplies_MouseDoubleClick">
+					<ListView.View>
+						<GridView>
+							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="120" />
+							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=description}" Width="280" />
+						</GridView>
+					</ListView.View>
+				</ListView>
+
+				<Button Grid.Column="0" Grid.Row="2" Margin="2,20,2,2" Width="120" Height="30" Content="Remove Item" Click="ButtonRemoveItem_Click"/>
+
+				<ListView Grid.Column="1" Grid.Row="2" Name="ListViewOrderDetails" Margin="2,2,2,2" ItemsSource="{Binding Path=ClientSupplyOrder.ClientSupplyOrderDetailCollection}">
+					<ListView.View>
+						<GridView>
+							<GridViewColumn Header="Quantity" DisplayMemberBinding="{Binding Path=quantityordered}" Width="50" />
+							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="90" />
+							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=supplydescription}" Width="200" />
+						</GridView>
+					</ListView.View>
+				</ListView>
+
+			</Grid>
+
+			<Grid Grid.Column="0" Grid.Row="2">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto"></ColumnDefinition>
+					<ColumnDefinition Width="2*"></ColumnDefinition>
+					<ColumnDefinition Width="Auto"></ColumnDefinition>
+					<ColumnDefinition Width="2*"></ColumnDefinition>
+					<ColumnDefinition Width="Auto"></ColumnDefinition>
+					<ColumnDefinition Width="*"></ColumnDefinition>
+					<ColumnDefinition Width="Auto"></ColumnDefinition>
+					<ColumnDefinition Width="2*"></ColumnDefinition>
+				</Grid.ColumnDefinitions>
+
+				<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Taken By:</TextBlock>
+				<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.TakenBy}" />
+
+				<TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >OrderFilled By:</TextBlock>
+				<TextBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.FilledBy}" />
+
+				<TextBlock Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Final:</TextBlock>
+				<CheckBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" IsChecked="{Binding Path=ClientSupplyOrder.OrderFinal}" />
+
+				<TextBlock Grid.Column="6" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >DateSent:</TextBlock>
+				<TextBox Grid.Column="7" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.DateSentOut, Converter={StaticResource ShortDateTimeConverter}}" />
+				
+			</Grid>
+
+		</Grid>
+
+		<StackPanel Grid.Row="2" HorizontalAlignment="Right" Orientation="Horizontal">
+			<Button Margin="5" Width="120" Height="30" Click="ButtonOk_Click" Content="OK" />
+		</StackPanel>
+
+	</Grid>
+
 </Window>
