--- a/UI/Client/ClientEntryV2.xaml
+++ b/UI/Client/ClientEntryV2.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ClientEntryV2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Client Entry" Height="600"  Width="600"
+        Title="Client Entry" Height="550"  Width="600"
 		WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
 
 	<Grid>
@@ -37,16 +37,16 @@
 						<RowDefinition Height="Auto"></RowDefinition>
 					</Grid.RowDefinitions>
 					
-					<TextBlock Grid.Column="0" Grid.Row="0" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client Id:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="0" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ClientId}" />
+					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client Id:</TextBlock>
+					<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ClientId}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="1" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client Name:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="1" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ClientName}" />
+					<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client Name:</TextBlock>
+					<TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ClientName}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="2" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Address:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="2" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Address}" />
+					<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Address:</TextBlock>
+					<TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Address}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="3" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >City:</TextBlock>
+					<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >City:</TextBlock>
 					<Grid Grid.Column="1" Grid.Row="3">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="2*"></ColumnDefinition>
@@ -55,48 +55,48 @@
 							<ColumnDefinition Width="Auto"></ColumnDefinition>
 							<ColumnDefinition Width="*"></ColumnDefinition>
 						</Grid.ColumnDefinitions>
-						
-						<TextBox Grid.Column="0" Grid.Row="0" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.City}" />
 
-						<TextBlock Grid.Column="1" Grid.Row="0" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >State:</TextBlock>
-						<TextBox Grid.Column="2" Grid.Row="0" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.State}" />
+						<TextBox Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.City}" />
 
-						<TextBlock Grid.Column="3" Grid.Row="0" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Zip:</TextBlock>
-						<TextBox Grid.Column="4" Grid.Row="0" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ZipCode}" />
+						<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >State:</TextBlock>
+						<TextBox Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.State}" />
+
+						<TextBlock Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Zip:</TextBlock>
+						<TextBox Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ZipCode}" />
 					</Grid>
 
-					<TextBlock Grid.Column="0" Grid.Row="4" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Long Distance:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="4" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.LongDistance}" />
+					<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Long Distance:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.LongDistance}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="5" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Telephone:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="5" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Telephone,Converter={StaticResource PhoneNumberConverter}}" />
+					<TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Telephone:</TextBlock>
+					<TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Telephone,Converter={StaticResource PhoneNumberConverter}}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="6" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Fax:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="6" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Fax,Converter={StaticResource PhoneNumberConverter}}" />
+					<TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Fax:</TextBlock>
+					<TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Fax,Converter={StaticResource PhoneNumberConverter}}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="7" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Contact Name:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="7" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ContactName}" />
+					<TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Contact Name:</TextBlock>
+					<TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ContactName}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="8" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Abbreviation:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="8" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Abbreviation}" />
+					<TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Abbreviation:</TextBlock>
+					<TextBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Abbreviation}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="9" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Distribution Type:</TextBlock>
-					<ComboBox Grid.Column="1" Grid.Row="9" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=DistributionTypeList}"
+					<TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Distribution Type:</TextBlock>
+					<ComboBox Grid.Column="1" Grid.Row="9" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=DistributionTypeList}"
 							  SelectedValue="{Binding Path=Client.DistributionType}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="10" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Facility Type:</TextBlock>
-					<ComboBox Grid.Column="1" Grid.Row="10" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=FacilityTypes}"
+					<TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Facility Type:</TextBlock>
+					<ComboBox Grid.Column="1" Grid.Row="10" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=FacilityTypes}"
 							  SelectedValue="{Binding Path=Client.FacilityType}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="12" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Billing Rule Set:</TextBlock>
-					<ComboBox Grid.Column="1" Grid.Row="12" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=BillingRuleSetCollection}"
+					<TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Billing Rule Set:</TextBlock>
+					<ComboBox Grid.Column="1" Grid.Row="12" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=BillingRuleSetCollection}"
 							  SelectedValue="{Binding Path=Client.BillingRuleSetId2}" SelectedValuePath="BillingRuleSetId" DisplayMemberPath="BillingRuleSetName" />
 
-					<TextBlock Grid.Column="0" Grid.Row="13" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Inactive:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="13" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.Inactive}" />
+					<TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Inactive:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="13" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.Inactive}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="14" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Show physicians on requisition:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="14" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.ShowPhysiciansOnRequisition}" />
+					<TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Show physicians on requisition:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="14" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.ShowPhysiciansOnRequisition}" />
 				</Grid>
 			</TabItem>
 			
@@ -160,67 +160,20 @@
 			<TabItem Header="Suppiy Order">
 				<Grid>
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="Auto"></ColumnDefinition>
 						<ColumnDefinition Width="*"></ColumnDefinition>
+						<ColumnDefinition Width="Auto"></ColumnDefinition>
 					</Grid.ColumnDefinitions>
-
-					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto"></RowDefinition>
-						<RowDefinition Height="Auto"></RowDefinition>
-						<RowDefinition Height="Auto"></RowDefinition>
-						<RowDefinition Height="Auto"></RowDefinition>
-						<RowDefinition Height="Auto"></RowDefinition>
-						<RowDefinition Height="Auto"></RowDefinition>
-						<RowDefinition Height="Auto"></RowDefinition>
-						<RowDefinition Height="Auto"></RowDefinition>
-						<RowDefinition Height="Auto"></RowDefinition>
-						<RowDefinition Height="Auto"></RowDefinition>
-					</Grid.RowDefinitions>
-
-					<TextBlock Grid.Column="0" Grid.Row="0" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Id:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="0" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Order Id" />
-
-					<TextBlock Grid.Column="0" Grid.Row="1" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Date:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="1" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Order Date" />
-
-					<TextBlock Grid.Column="0" Grid.Row="2" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Comment:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="2" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Comment" />
-
-					<TextBlock Grid.Column="0" Grid.Row="3" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Quantity:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="3" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Quantity" />
-
-					<TextBlock Grid.Column="0" Grid.Row="4" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Taken By:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="4" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Taken By" />
-
-					<TextBlock Grid.Column="0" Grid.Row="5" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >OrderFilled By:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="5" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Filled By" />
-
-					<TextBlock Grid.Column="0" Grid.Row="6" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Final:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="6" Margin="5" VerticalAlignment="Center" />
-
-					<TextBlock Grid.Column="0" Grid.Row="7" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >DateSent:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="7" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Date sent" />
-
-					<Grid Grid.Column="0" Grid.Row="8" Margin="2">
-						<Grid.RowDefinitions>
-							<RowDefinition Height="Auto"></RowDefinition>
-							<RowDefinition Height="Auto"></RowDefinition>
-							<RowDefinition Height="Auto"></RowDefinition>
-							<RowDefinition Height="Auto"></RowDefinition>
-						</Grid.RowDefinitions>
-						
-						<Button Grid.Row="0" Margin="5,5,5,5" Width="120" Height="30">Cytology Supplies</Button>
-						<Button Grid.Row="1" Margin="5,5,5,5" Width="120" Height="30">Biopsy Supplies</Button>
-						<Button Grid.Row="2" Margin="5,5,5,5" Width="120" Height="30">Transport Supplies</Button>
-						<Button Grid.Row="3" Margin="5,5,5,5" Width="120" Height="30">Forms</Button>
-					</Grid>
 					
-					<ListView Grid.Column="1" Grid.Row="8" Margin="5,5,5,5">
+					<StackPanel  Grid.Column="1" Orientation="Vertical" Margin="10">
+						<Button Grid.Row="0" Margin="5,5,5,5" Width="120" Height="30" Content="New" Click="ButtonNewSupplyOrder_Click"/>
+						<Button Grid.Row="4" Margin="5,5,5,5" Width="120" Height="30" Content="Delete" Click="ButtonDeleteSupplyOrder_Click"/>
+					</StackPanel>
+					
+					<ListView Grid.Column="0" Grid.Row="0" Name="ListViewOrderDetails" Margin="10" ItemsSource="{Binding Path=ClientSupplyOrderCollection}" MouseDoubleClick="ListViewOrderDetails_MouseDoubleClick">
 						<ListView.View>
 							<GridView>
-								<GridViewColumn Header="Quantity" Width="50" />
-								<GridViewColumn Header="Item" Width="90" />
-								<GridViewColumn Header="Description" Width="200" />
+								<GridViewColumn Header="Order Date" DisplayMemberBinding="{Binding Path=OrderDate, Converter={StaticResource ShortDateConverter}}" Width="100" />
+								<GridViewColumn Header="Date Sent Out" DisplayMemberBinding="{Binding Path=DateOrderSent, Converter={StaticResource ShortDateConverter}}" Width="100" />
 							</GridView>
 						</ListView.View>
 					</ListView>
