--- a/UI/Client/ClientEntryV2.xaml
+++ b/UI/Client/ClientEntryV2.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ClientEntryV2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Client Entry" Height="550"  Width="600"
+        Title="Client Entry" Height="550"  Width="800"
 		WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
 
 	<Grid>
@@ -16,7 +16,7 @@
 				<Grid>
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="Auto"></ColumnDefinition>
-						<ColumnDefinition></ColumnDefinition>
+						<ColumnDefinition Width="*"></ColumnDefinition>
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="Auto"></RowDefinition>
@@ -36,9 +36,6 @@
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 					</Grid.RowDefinitions>
-					
-					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client Id:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ClientId}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client Name:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ClientName}" />
@@ -115,7 +112,7 @@
 
 					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" Text="Members:" />
 
-					<ListBox Name="ListBoxPhysicians" Grid.Column="0" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" BorderThickness="1" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+					<ListBox Name="ListBoxPhysicians" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" BorderThickness="1" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
 							 ItemsSource="{Binding Path=Physicians}">
 						<ListBox.ItemTemplate>
 							<DataTemplate>
@@ -142,7 +139,7 @@
 						<Button Name="ButtonRemoveFromClient" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonRemoveFromClient_Click">Remove ></Button>
 					</StackPanel>
 
-					<ListBox Name="ListBoxAvailableProviders" Grid.Column="2" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" BorderThickness="1" IsTabStop="False"
+					<ListBox Name="ListBoxAvailableProviders" Grid.Column="2" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" BorderThickness="1" IsTabStop="False"
 							  ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=PhysicianCollection}">
 						<ListBox.ItemTemplate>
 							<DataTemplate>
