--- a/UI/Client/ClientSupplyOrderDialog.xaml
+++ b/UI/Client/ClientSupplyOrderDialog.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ClientSupplyOrderDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ClientSupplyOrderDialog" Height="600" Width="600">
+        Title="ClientSupplyOrderDialog" Height="600" Width="900"
+		WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
     <Grid>
 
 		<Grid.RowDefinitions>
@@ -39,13 +40,13 @@
 				<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientName}" />
 
 				<TextBlock Grid.Column="2" Grid.Row="0" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client Id:</TextBlock>
-				<TextBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientId}" />
+				<TextBlock Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientId}" />
 
 				<TextBlock Grid.Column="0" Grid.Row="1" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Address:</TextBlock>
 				<TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientAddress}" />
 
 				<TextBlock Grid.Column="2" Grid.Row="1" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Id:</TextBlock>
-				<TextBox Grid.Column="3" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.OrderId}" />
+				<TextBlock Grid.Column="3" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientSupplyOrderId}" />
 
 				<TextBlock Grid.Column="0" Grid.Row="2" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >City/State/Zip:</TextBlock>
 				
@@ -66,7 +67,7 @@
 				<TextBox Grid.Column="3" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.OrderDate, Converter={StaticResource ShortDateTimeConverter}}" />
 
 				<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Comment:</TextBlock>
-				<TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding Path=ClientSupplyOrder.Comment}" />
+				<TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Grid.ColumnSpan="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding Path=ClientSupplyOrder.Comment}" />
 
 				<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Quantity:</TextBlock>
 				<TextBox Grid.Column="1" Grid.Row="4" Name="TextBoxQuantity" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" />
@@ -104,8 +105,8 @@
 				<ListView Grid.Column="1" Grid.Row="0" Name="ListViewSupplies" Margin="2,2,2,2" ItemsSource="{Binding Path=ClientSupplyCollection}" MouseDoubleClick="ListViewSupplies_MouseDoubleClick">
 					<ListView.View>
 						<GridView>
-							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="120" />
-							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=description}" Width="280" />
+							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="240" />
+							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=description}" Width="460" />
 						</GridView>
 					</ListView.View>
 				</ListView>
@@ -116,8 +117,8 @@
 					<ListView.View>
 						<GridView>
 							<GridViewColumn Header="Quantity" DisplayMemberBinding="{Binding Path=quantityordered}" Width="50" />
-							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="90" />
-							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=supplydescription}" Width="200" />
+							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="240" />
+							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=supplydescription}" Width="410" />
 						</GridView>
 					</ListView.View>
 				</ListView>
@@ -131,22 +132,24 @@
 					<ColumnDefinition Width="Auto"></ColumnDefinition>
 					<ColumnDefinition Width="2*"></ColumnDefinition>
 					<ColumnDefinition Width="Auto"></ColumnDefinition>
-					<ColumnDefinition Width="*"></ColumnDefinition>
+					<ColumnDefinition Width=".3*"></ColumnDefinition>
 					<ColumnDefinition Width="Auto"></ColumnDefinition>
 					<ColumnDefinition Width="2*"></ColumnDefinition>
 				</Grid.ColumnDefinitions>
 
 				<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Taken By:</TextBlock>
-				<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.TakenBy}" />
+				<ComboBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=UserCollection}"
+						  SelectedValuePath="UserId" DisplayMemberPath="DisplayName" SelectedValue="{Binding Path=ClientSupplyOrder.OrderTakenById}" />
 
 				<TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >OrderFilled By:</TextBlock>
-				<TextBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.FilledBy}" />
+				<ComboBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch"  ItemsSource="{Binding Path=UserCollection}"
+						  SelectedValuePath="UserId" DisplayMemberPath="DisplayName" SelectedValue="{Binding Path=ClientSupplyOrder.OrderFilledById}" />
 
 				<TextBlock Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Final:</TextBlock>
 				<CheckBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" IsChecked="{Binding Path=ClientSupplyOrder.OrderFinal}" />
 
 				<TextBlock Grid.Column="6" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >DateSent:</TextBlock>
-				<TextBox Grid.Column="7" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.DateSentOut, Converter={StaticResource ShortDateTimeConverter}}" />
+				<TextBox Grid.Column="7" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.DateOrderSent, Converter={StaticResource ShortDateTimeConverter}}" />
 				
 			</Grid>
 
