--- a/UI/Login/FinalizeAccession/AssignmentPage.xaml
+++ b/UI/Login/FinalizeAccession/AssignmentPage.xaml
@@ -26,8 +26,10 @@
 					<Grid HorizontalAlignment="Stretch">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="100"></ColumnDefinition>
+                            <ColumnDefinition Width="150"></ColumnDefinition>
+							<ColumnDefinition Width="200"></ColumnDefinition>
                             <ColumnDefinition Width="250"></ColumnDefinition>
-							<ColumnDefinition Width="300"></ColumnDefinition>
+                            <ColumnDefinition Width="250"></ColumnDefinition>
 						</Grid.ColumnDefinitions>
 						<Grid.RowDefinitions>
 							<RowDefinition Height="Auto"></RowDefinition>							
@@ -38,10 +40,15 @@
 						<ComboBox Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding ElementName=UserControlAssignmentPage, Path=DataContext.PathologistUsers}"
 								  SelectedValuePath="UserId"
 								  DisplayMemberPath="DisplayName"
-								  SelectedValue="{Binding Path=AssignedToId}">
-                            
-						</ComboBox>                                                
-					</Grid>
+								  SelectedValue="{Binding Path=AssignedToId}"
+                                  SelectionChanged="ComboBoxUser_SelectionChanged" Tag="{Binding}">
+						</ComboBox>
+                        <ComboBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=DataContext.FacilityCollection, ElementName=UserControlAssignmentPage}" SelectedValuePath="FacilityId" DisplayMemberPath="FacilityName"
+							SelectedValue="{Binding Path=TechnicalComponentFacilityId}" />
+
+                        <ComboBox Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=DataContext.FacilityCollection, ElementName=UserControlAssignmentPage}" SelectedValuePath="FacilityId" DisplayMemberPath="FacilityName"
+							SelectedValue="{Binding Path=ProfessionalComponentFacilityId}" />
+                    </Grid>
 				</DataTemplate>
 			</Grid.Resources>
 
@@ -69,15 +76,54 @@
 				<TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" TextAlignment="Left" Text="{Binding Path=AccessionOrder.PatientDisplayName}" />
 			</Grid>
 
-			<ListBox Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}" ItemTemplate="{StaticResource PanelSetTemplate}">
+            <!--
+			<ListBox Name="ListBoxPanelSets" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}" ItemTemplate="{StaticResource PanelSetTemplate}">
 				<ListBox.ItemsPanel>
 					<ItemsPanelTemplate>
 						<StackPanel />
 					</ItemsPanelTemplate>
 				</ListBox.ItemsPanel>
-			</ListBox>					
-            
-		</Grid>
+			</ListBox>
+            -->
+
+            <ListView Name="ListViewPanelSets" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2"  ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}">
+                <ListView.View>
+                    <GridView AllowsColumnReorder="True">
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="ReportNo" Width="110"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=PanelSetName}" Header="Test" Width="150"/>                        
+                        <GridViewColumn Header="Pathologist" Width="210">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ComboBox Margin="2,2,2,2" Width="190" ItemsSource="{Binding ElementName=UserControlAssignmentPage, Path=DataContext.PathologistUsers}"
+								      SelectedValuePath="UserId"
+								      DisplayMemberPath="DisplayName"
+								      SelectedValue="{Binding Path=AssignedToId}"
+                                      SelectionChanged="ComboBoxUser_SelectionChanged" Tag="{Binding}">
+                                    </ComboBox>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="Technical Component" Width="300">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ComboBox Margin="2,2,2,2"  Width="280" ItemsSource="{Binding Path=DataContext.FacilityCollection, ElementName=UserControlAssignmentPage}" SelectedValuePath="FacilityId" DisplayMemberPath="FacilityName"
+							            SelectedValue="{Binding Path=TechnicalComponentFacilityId}" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="Professional Component" Width="300">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ComboBox Margin="2,2,2,2"  Width="280" ItemsSource="{Binding Path=DataContext.FacilityCollection, ElementName=UserControlAssignmentPage}" SelectedValuePath="FacilityId" DisplayMemberPath="FacilityName"
+							            SelectedValue="{Binding Path=ProfessionalComponentFacilityId}" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>            
+
+        </Grid>
 
 		<Border Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
 		<Button Grid.Column="0" Grid.Row="2" Name="ButtonBack" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40" HorizontalAlignment="Left">&lt; Back</Button>
